--- a/source/pug/material.pug
+++ b/source/pug/material.pug
@@ -36,7 +36,7 @@ html(lang="es")
                             .card-body
 
                                 ul.list-group.list-group-flush.list.my-n3.nav-temas
-                                    +navTemaItem('play', 'Riesgos eléctricos y mecánicos de motores síncronos de imanes permanentes', '#-intro')
+                                    +navTemaItem('play', 'Introducción', '#-intro')
 
                                     +navTemaItem('1', 'Marco conceptual quemaduras por agentes químicos', '#tema-1')
                                     +navTemaItem('2', 'Primeros auxilios en el lugar de la agresión (comunidad)', '#tema-2')
